media-keys: Fix grabbing of previously disabled shortcuts

If a key is not actually grabbed when we try to ungrab it, we register
the request and ungrab the key after the grab operation has completed.
This avoids leaking bindings when a shortcut is disabled while a grab
operation is in progress, however it means that any grab operation done
after trying to ungrab an unset shortcut will be immediately undone.
This is the currently the case when a shortcut settings changes, which
we handle as a simple combination of ungrab and grab - we need to make
sure to only request a later ungrab if there's a pending grab.

https://bugzilla.gnome.org/show_bug.cgi?id=784702